tdf#151794 sc validate: honor NO_BLANK in Cell range dropdown

This fixes LO 6.0 regression 3567d00b5e1168affd067330037e062e10b05b2d

Not really a regression - it never let any blanks before then,
regardless of the "Allow empty cells" setting in the
Data - Validity rule.

The default in LO is to allow empty cells.

Change-Id: I2d6fb4d7be3622c81b28f5d30985cdb5e6b2fe11
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/142002
Tested-by: Jenkins
Reviewed-by: Justin Luth <jluth@mail.com>